[GENERAL] - Changed all spanish to english.
