# openapi.yml
@@ -591,7 +591,7 @@ components:
     User:
       type: object
       properties:
-        nombre:
+        name:
           type: string
           example: Name
         tel:
@@ -606,7 +606,7 @@ components:
     UserResponse:
       type: object
       properties:
-        nombre:
+        name:
           type: string
           example: Name
         tel:
@@ -634,7 +634,7 @@ components:
         year:
           type: integer
           example: 1970
-        duration:
+        running_time:
           type: integer
           example: 120
         rating:
